# DTIM

./: .gitattributes  .gitignore  .gitmodules  .metadata  README.md  README_zh.md  iconfont.yaml  l10n.yaml  pubspec.yaml
assets/: app_loader.json  crypto-wallet.json
chain_wraper/: Cargo.toml
chain_wraper/chain_wraper.xcodeproj/: project.pbxproj
chain_wraper/chain_wraper.xcodeproj/xcuserdata/asyou.xcuserdatad/xcschemes/: xcschememanagement.plist
chain_wraper/src/: bridge_generated.io.rs  bridge_generated.rs
docs/: install_and_run.md  local_test.md  testing-guide.md  ton.md
hacks/: .config  base_build.sh  build_linux.sh  build_mac.sh  build_macos.sh  build_web.sh  build_windows.sh  chain_gen.sh  codegen_linux.sh  codegen_mac.sh  gen_build.sh  gen_icon_font.sh  icon_build.sh  init_dao.dart  init_linux.sh  init_mac.sh  init_windows.sh  mac_lib_get.sh  precompile_linux.sh  precompile_mac.sh  precompile_windows.sh  rust_test.dart  up_oss.sh  update_toolchain.sh
integration_test/: base.dart  chat_test.dart  dao_test.dart  main_test.dart
lib/: bridge_generated.dart  bridge_struct.dart  bridge_struct_json.dart  bridge_struct_json.g.dart  chain_wraper.io.dart  main.dart  main.dev.dart  native_wraper.dart  native_wraper.io.dart  native_wraper.web.dart  objectbox-model.json  objectbox.g.dart  preloader.dart  router.dart  router_model.dart  rust_wraper.io.dart  x_bridge.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
macos/: Podfile  build.sh
rust_wraper/: Cargo.toml  rust-toolchain.toml
rust_wraper/rust_wraper.xcodeproj/: project.pbxproj
rust_wraper/rust_wraper.xcodeproj/xcuserdata/asyou.xcuserdatad/xcschemes/: xcschememanagement.plist
rust_wraper/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  model.rs
test/: adaptive_bottom_sheet_test.dart  app_bar_test.dart  avatar_test.dart  chat_list_test.dart  close_bar_test.dart  direct_chat_test.dart  drawer_test.dart  functions_test.dart  hover_list_item.dart  identicon_test.dart  last_status_test.dart  loading_test.dart  model_bar_test.dart  name_with_emoji_test.dart  no_match_user_test.dart  platform_infos_test.dart  popup_test.dart  search_element_test.dart  time_test.dart  (+2 more)
(+801 files in other folders)
