[package]
name = "rust_wraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_wraper"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.66"
serde = "1.0.143"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
flutter_rust_bridge = "1.71.1"
asyou_rust_sdk = { git = "https://github.com/WeteeDAO/wetee-rust-sdk.git" }
openssl = { version = "0.10", features = ["vendored"] }
# asyou_rust_sdk = { path = "../../rust-sdk" }
