[package]
name = "rust_wraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_wraper"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
hex = "0.4.3"
anyhow = "1.0.66"
serde = "1.0.143"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
flutter_rust_bridge = "1.75.1"
# wetee_rust_sdk = { git = "https://github.com/WeteeOrg/wetee-rust-sdk.git" }
wetee_rust_sdk = { path = "../../rust-sdk" }

[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10" }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
